WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85805
Shrink SVGInlineTextBox object size
https://bugs.webkit.org/show_bug.cgi?id=85805
Summary
Shrink SVGInlineTextBox object size
Rob Buis
Reported
2012-05-07 09:31:09 PDT
The way we use bitpacking here is not ideal.
Attachments
Patch
(1.38 KB, patch)
2012-05-07 09:47 PDT
,
Rob Buis
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2012-05-07 09:47:05 PDT
Created
attachment 140541
[details]
Patch
Darin Adler
Comment 2
2012-05-07 10:37:13 PDT
Comment on
attachment 140541
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=140541&action=review
Where’s the compile-time size assertion for this class?
> Source/WebCore/rendering/svg/SVGInlineTextBox.h:86 > + unsigned m_paintingResourceMode : 4;
When we add a new mode, what will point someone here to add more bits? I am worried that this mode is defined in another file, and someone modifying it would have no reason to look here. Maybe a comment in the file that defines the enum?
Rob Buis
Comment 3
2012-05-07 13:27:05 PDT
(In reply to
comment #2
)
> (From update of
attachment 140541
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=140541&action=review
> > Where’s the compile-time size assertion for this class? > > > Source/WebCore/rendering/svg/SVGInlineTextBox.h:86 > > + unsigned m_paintingResourceMode : 4; > > When we add a new mode, what will point someone here to add more bits? I am worried that this mode is defined in another file, and someone modifying it would have no reason to look here. Maybe a comment in the file that defines the enum?
I fixed both before landing it in
r116343
. Cheers, Rob.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug