Shrink SVGInlineTextBox object size https://bugs.webkit.org/show_bug.cgi?id=85805

Reviewed by Darin Adler.

Reduce the object size of SVGInlineTextBox by using bitfields. This
should be 4 bytes on 32-bits and 8 bytes on 64-bits systems.

* rendering/svg/RenderSVGResource.h:
* rendering/svg/SVGInlineTextBox.cpp:
(ExpectedSVGInlineTextBoxSize):
(WebCore):
* rendering/svg/SVGInlineTextBox.h:
(SVGInlineTextBox):

Canonical link: https://commits.webkit.org/103401@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116343 268f45cc-cd09-0410-ab3c-d52691b4dbfc